--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </div>
       <div>
         <div class="travel3__image">
-          <img src="./travel3.jpg" alt="Travel">>
+          <img src="./travel3.jpg" alt="Travel">
           <div class="travel3__desc">
             <h5>By Two Bad Tourists</h5>
             <h4>Exploring LGBTQ+-friendly Barcelona </h4>
